2003-12-03  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::lock): Use UINT32_MAX
	instead of 0xffffffff.  Accomodate Win 9x bug in evaluating length
	of area to lock when given length is 0.

2003-12-03  Pierre Humblet <pierre.humblet@ieee.org>

	* fhandler_disk_file.cc (fhandler_disk_file::lock): Interchange
	values of off_low and off_high.

2003-12-03  Corinna Vinschen  <corinna@vinschen.de>

	* fcntl.cc (fcntl_worker): Remove static storage class.
	* flock.cc (flock): Use struct __flock64. Call fcntl_worker.
	Use Cygwin errno functions instead of accessing errno directly.
	* winsup.h: Declare fcntl_worker.

2003-12-03  Corinna Vinschen  <corinna@vinschen.de>

	* fcntl.cc: Whitespace cleanup.

2003-12-03  Christopher Faylor  <cgf@redhat.com>

	* cygthread.cc (cygthread::stub): Properly establish _threadinfo
	environment.
	(cygthread::stub2): New function.
	(cygthread::simplestub): Ditto.
	(cygthread::simplestub2): New function.
	* cygthread.h (cygthread::stub2): Declare new function.
	(cygthread::simplestub2): Ditto.
	* cygtls.h (_threadinfo::call): Declare new function.
	(_threadinfo::call2): Ditto.
	* dcrt0.cc (dll_crt0_1): Accommodate new _threadinfo::init which
	doesn't return pointer to tls.
	(_dll_crt0): Remove obsolete DECLARE_TLS_STORAGE.
	(dll_crt0): Ditto.
	* exceptions.cc (_threadinfo::call): New function.
	(_threadinfo::call2): Ditto.
	(_threadinfo::init): Don't return pointer.
	* thread.cc (pthread::thread_init_wrapper): Properly establish
	_threadinfo environment.
	(pthread::thread_init_wrapper2): New function.
	* thread.h (pthread::thread_init_wrapper): Remove noreturn attribute
	(pthread::thread_init_wrapper2): Declare new function.
	* winbase.h: Remove obsolete code.

2003-12-02  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Change the way that -f options are appended to CFLAGS,
	slightly.

2003-12-02  Christopher Faylor  <cgf@redhat.com>

	* fcntl.cc (_fcntl): Silence a compiler warning.
